--- a/css/theme.css
+++ b/css/theme.css
@@ -1030,6 +1030,13 @@ div#block-iastate-theme-local-tasks {
   max-width: 1140px;
   margin: auto;
 }
+div#block-iastate-theme-content--2 {
+  padding-left: 0%;
+  padding-right: 6%;
+  padding-top: 10px;
+  max-width: 1140px;
+  margin: auto;
+}
 
 /* --------------------------------------  */
 /* ## Responsive
@@ -1038,6 +1045,16 @@ div#block-iastate-theme-local-tasks {
   .isu-page-column {
 		max-width: 98%;
 	}
+  div#block-iastate-theme-page-title--2, div#block-iastate-theme-content--2 {
+    padding-left: 2%;
+  }
+  .row.three-col {
+    display: grid;
+    grid-template-rows:repeat(3, 1fr);
+  }
+  .row.three-col .col-md-4{
+    max-width: 100%;
+  }
 }
 
 @media screen and (max-width : 1199px) {
@@ -1052,6 +1069,10 @@ div#block-iastate-theme-local-tasks {
    max-width: 94%;
    margin: auto;
  }
+div#block-iastate-theme-content--2 {
+  margin: auto;
+  max-width: 94%;
+}
 }
 
 /* --- ## Submitted By --- */
